--- a/Cat_and_Soup2/Cat_and_Soup2.vcxproj.filters
+++ b/Cat_and_Soup2/Cat_and_Soup2.vcxproj.filters
@@ -14,4 +14,26 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Main_Cat_and_Soup.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Interaction.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Event.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Cat_and_Soup.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Private.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
