event는 못가림 끝

--- a/Cat_and_Soup2/Cat_and_Soup2.vcxproj
+++ b/Cat_and_Soup2/Cat_and_Soup2.vcxproj
@@ -183,7 +183,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Event.c">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">Private.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Interaction.c">
@@ -191,11 +191,11 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">Private.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Main.c">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">Private.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Main_Cat_and_Soup.c">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">Private.h</PrecompiledHeaderFile>
     </ClCompile>
   </ItemGroup>
